Fixed main menu on smaller screens.

--- a/less/overrides.less
+++ b/less/overrides.less
@@ -41,7 +41,7 @@ body {
     .navbar-default .navbar-nav > li > a {
         color: @navbar-default-link-color;
         font-family: Verdana,Geneva,sans-serif;
-        font-size: 100%;
+        font-size: 12pt;
         font-weight: bold;
         text-transform: uppercase;  
         text-align: center;
@@ -943,8 +943,11 @@ article {
 }
 
 
-@media only screen and (max-width : 1555px) {
-
+@media only screen and (max-width : 1400px) {
+    .navbar-default .navbar-nav > li > a {
+        font-size: 10pt!important;
+        min-width: 100px!important;
+    }
 }
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
